# classic-complearn

./: AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  NEWS  README.md  THANKS  acinclude.m4  aclocal.m4  complearn-gomp.pc.in  complearn.m4  configure.ac
doc/: ncd-server-protocol.txt
doc/man/: anycompress.1  anydecompress.1  complearn-config.1  complearn.5  ncd.1
doxy/: complearn-environment.c  real-compressor.c
examples/: README
examples/10-mammals/: blueWhale.txt  cat.txt  chimpanzee.txt  finWhale.txt  graySeal.txt  harborSeal.txt  horse.txt  human.txt  mouse.txt  rat.txt
examples/sampleapp/: ChangeLog  NEWS  README  configure.ac
examples/sampleapp/src/: Makefile.am  rtest.c
examples/speeches/: bush-911-address  edkennedy-RFK-eulogy  fdr-first-inaugural  fdr-pearl-harbor  jfk-civil-rights-address  jfk-cuban-missile-crisis  jfk-inaugural-address  mlk-i-have-a-dream  mlk-mountaintop  mx-ballot-or-bullet  reagan-challenger  reagan-evil-empire  reagan-first-inaugural  rfk-mlk-assassination  troosevelt-muckrake  wilson-inaugural  wilson-war-message
m4/: ChangeLog
po/: Makevars  POTFILES.in  de.po  libcomplearn.pot  ru.po
src/: Makefile.am  Makefile.in  anycompress.c  anydecompress.c  clconfig.c  clnexus.c  cloutput.c  complearn-compressor-driver.gob  complearn-config.c.in  complearn-environment.gob  complearn-external-compressor.gob  complearn-external-file-compressor.gob  complearn-ncd.gob  complearn-rcbzip.gob  complearn-rcbzlib.gob  complearn-rcgzip.gob  complearn-rczlib.gob  complearn-real-compressor-adaptor.gob  complearn-vcblocksort.gob  complearn.h  ncd.c  privconf.h.in  qsufsort.c  real-compressor.c  uncd.c  util.c
src/complearn/: clconfig.h  cloutput.h  complearn.h  newcomplearn.h  real-compressor.h  util.h
tests/: Makefile.am  Makefile.in  check_cloutput.c  check_complearn.c  check_environment.c  check_ncd.c  check_util.c  suite.h
